package com.canerture.search.ui

internal object SearchTestTags {
    const val TOOLBAR = "search.toolbar"
    const val SEARCH_BAR = "search.searchBar"

    // Empty state
    const val EMPTY_MESSAGE_TEXT = "search.emptyMessageText"

    // Quiz item
    const val QUIZ_ITEM_IMAGE = "search.quizItem.image"
    const val QUIZ_ITEM_NAME_TEXT = "search.quizItem.nameText"
    const val QUIZ_ITEM_QUESTION_COUNT_TEXT = "search.quizItem.questionCountText"
    const val QUIZ_ITEM_HYPHEN_TEXT = "search.quizItem.hyphenText"
    const val QUIZ_ITEM_CATEGORY_TEXT = "search.quizItem.categoryText"
}
