package com.canerture.favorites.ui

internal object FavoritesTestTags {
    const val TOOLBAR = "favorites.toolbar"
    const val DIALOG = "favorites.dialog"

    // Empty state
    const val EMPTY_TEXT = "favorites.emptyText"

    // Favorite quiz item
    const val ITEM_IMAGE = "favorites.quizItem.image"
    const val ITEM_NAME_TEXT = "favorites.quizItem.nameText"
    const val ITEM_QUESTION_COUNT_TEXT = "favorites.quizItem.questionCountText"
    const val ITEM_HYPHEN_TEXT = "favorites.quizItem.hyphenText"
    const val ITEM_CATEGORY_TEXT = "favorites.quizItem.categoryText"
}
