package com.canerture.leaderboard.ui

internal object LeaderboardTestTags {
    const val TOOLBAR = "leaderboard.toolbar"
    const val DIALOG = "leaderboard.dialog"

    // TopRankItem
    const val TOP_RANK_AVATAR = "leaderboard.topRank.avatar"
    const val TOP_RANK_RANK = "leaderboard.topRank.rank"
    const val TOP_RANK_USERNAME = "leaderboard.topRank.username"
    const val TOP_RANK_SCORE = "leaderboard.topRank.score"

    // CurrentUserItem
    const val CURRENT_USER_RANK = "leaderboard.currentUser.rank"
    const val CURRENT_USER_AVATAR = "leaderboard.currentUser.avatar"
    const val CURRENT_USER_USERNAME = "leaderboard.currentUser.username"
    const val CURRENT_USER_SCORE = "leaderboard.currentUser.score"

    // UserItem
    const val USER_ITEM_RANK = "leaderboard.userItem.rank"
    const val USER_ITEM_AVATAR = "leaderboard.userItem.avatar"
    const val USER_ITEM_USERNAME = "leaderboard.userItem.username"
    const val USER_ITEM_SCORE = "leaderboard.userItem.score"
}
